--- a/www/index.html
+++ b/www/index.html
@@ -9,10 +9,6 @@
   <script src="/static/components/highlightjs/highlight.pack.js"></script>
   <link rel="stylesheet" href="/static/components/highlightjs/styles/googlecode.css">
 
-  <script src="/static/components/react/react.js"></script>
-  <script src="/static/components/react/JSXTransformer.js"></script>
-  <script src="/static/components/react-router/dist/react-router.js"></script>
-
   <script src="/static/codediff.js/difflib.js"></script>
   <script src="/static/codediff.js/codediff.js"></script>
   <link rel="stylesheet" href="/static/codediff.js/codediff.css">
@@ -31,43 +27,17 @@
 
 <script>
 var pairs = {{ .Pairs }};
-//[{"a": "main.go", "b": "main.go", "idx": 0, "type": "change"}];
 var initialIdx = 0;
 var HAS_IMAGE_MAGICK = false;
 </script>
 
-<script type="text/jsx;harmony=true" src="/static/js/util.js"></script>
-<script type="text/jsx;harmony=true" src="/static/js/image.jsx"></script>
-<script type="text/jsx;harmony=true" src="/static/js/components.jsx"></script>
-<script type="text/jsx;harmony=true">
-/** @jsx React.DOM */
-
-var Route = ReactRouter.Route;
-var Routes = ReactRouter.Routes;
-
-var App = React.createClass({
-  render: function() {
-    return <ReactRouter.RouteHandler />;
-  }
-});
-
-var routes = (
-  <Route handler={App}>
-    <Route name="pair" path="/:index?" handler={makeRoot(pairs, initialIdx)} />
-  </Route>
-);
-
-ReactRouter.run(routes, ReactRouter.HistoryLocation, function(Handler) {
-  React.render(<Handler/>, $('#application').get(0));
-});
-</script>
+<script src="/static/dist/bundle.js"></script>
 
 <script>
 window.addEventListener('beforeunload', function(e) {
   $.post('/kill');
 });
 </script>
-
 
 </div>
 </body>
