--- a/www/index.html
+++ b/www/index.html
@@ -35,7 +35,7 @@ var HAS_IMAGE_MAGICK = false;
 
 <script>
 window.addEventListener('beforeunload', function(e) {
-  $.post('/kill');
+  //$.post('/kill');
 });
 </script>
 
