--- a/www/index.html
+++ b/www/index.html
@@ -1,22 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title> Diff </title>
+  <title>Differ</title>
 
   <script src="/static/components/jquery/dist/jquery.min.js"></script>
   <script src="/static/components/underscore/underscore.js"></script>
-
   <script src="/static/components/highlightjs/highlight.pack.js"></script>
-
-  <link rel="stylesheet" href="/static/components/highlightjs/styles/googlecode.css">
-
   <script src="/static/codediff.js/difflib.js"></script>
   <script src="/static/codediff.js/codediff.js"></script>
-  <link rel="stylesheet" href="/static/codediff.js/codediff.css">
 
-  <link href='/static/css/inconsolata.css' rel='stylesheet'>
-
-  <link rel="stylesheet" href="/static/css/style.css">
+  <link rel="stylesheet" href="/static/dist/main.css">
 </head>
 
 <body>
