move the rest of *.js files to js/ directory

--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@ var HAS_IMAGE_MAGICK = false;
 
 <script>
 window.addEventListener('beforeunload', function(e) {
-  //$.post('/kill');
+  $.post('/kill');
 });
 </script>
 
